--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -4,9 +4,12 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Hello World</title>
+        <title>How can we help?</title>
+        <link href="/applications20162/favicon.ico" type="image/x-icon" rel="icon">
         <link rel="stylesheet" href="public/assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="public/assets/css/mitie-helpdesk.css">
+        <link rel="stylesheet" href="public/assets/css/custom.css">
+        <link href='https://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script type="text/javascript" src="public/assets/js/bootstrap.min.js"></script>
     </head>
@@ -14,7 +17,9 @@
     	<div class="container">
             {% block content %}
             {% endblock %}
-            <footer></footer>
+            <footer>
+                <script src="public/assets/js/custom.js"></script>
+            </footer>
         </div>
     </body>
 </html>
