--- a/src/views/dev-homepage.html
+++ b/src/views/dev-homepage.html
@@ -2,6 +2,8 @@
 {% block content %}
 <form method="post" accept-charset="utf-8" id="tickets" action"/">
 	<input type="text" name="name">
+	<input type="text" name="namewhat">
+	<input type="text" name="room">
 	<button type="submit">Submit</button>
 </form>
 {% endblock %}
