--- a/src/views/homepage.html
+++ b/src/views/homepage.html
@@ -5,8 +5,6 @@
 			<div class="col-xs-10 col-sm-11">
 				<h3>How Can we help?</h3>
 				<p>Report to or request support from Property Services Support Desk.</p>
-				<p>See website for FAQs.</p>
-				<p>Your username (<b>$username@southdevon.ac.uk</b>) will be recorded when you submit this form. Not $username? <a href="#">Sign out</a></p>
 				<p class="no-margin" style="color:#C3232D; font-weight:bold;">* Required</p>
 			</div>
 			<div class="col-xs-2 col-sm-1">
@@ -20,8 +18,8 @@
 			</div>
 			<div class="col-xs-12">
 			  <div class="form-group required">
-			    <label for="email">Description</label>
-			    <input required="required" type="text" class="form-control" id="description">
+			    <label for="description">Description</label>
+			    <input name="description" required="required" type="text" class="form-control" id="description">
 			  </div>
 			</div>
 			<div class="col-xs-12 col-md-6">
@@ -60,8 +58,8 @@
 			</div>
 			<div class="col-xs-12 col-md-6">
 			  <div class="form-group required no-margin">
-			    <label for="pwd">Room or area?</label>
-			    <input type="text" required="required" class="form-control" id="area">
+			    <label for="area">Room or area?</label>
+			    <input name="room" type="text" required="required" class="form-control" id="area">
 			  </div>
 			</div>
 			<div class="col-xs-12">
@@ -70,26 +68,26 @@
 			</div>
 			<div class="col-xs-12 col-md-6">
 			  <div class="form-group">
-			    <label for="email">Requester's Name</label>
-			    <input type="text" class="form-control" id="description">
+			    <label for="name">Requester's Name</label>
+			    <input name="name" type="text" class="form-control">
 			  </div>
 			</div>
 			<div class="col-xs-12 col-md-6">
 			  <div class="form-group">
-			    <label for="email">Department</label>
-			    <input type="text" class="form-control" id="description">
+			    <label for="department">Department</label>
+			    <input name="department" type="text" class="form-control">
 			  </div>
 			</div>
 			<div class="col-xs-12 col-md-6">
 			  <div class="form-group">
-			    <label for="email">Contact phone number</label>
-			    <input type="tel" class="form-control" id="description">
+			    <label for="phone">Contact phone number</label>
+			    <input name="phone" type="tel" class="form-control">
 			  </div>
 			</div>
 			<div class="col-xs-12 col-md-6">
 			  <div class="input select form-group">
-			    <label for="building">Priority</label>
-			    <select name="building" id="building" type="text" class="form-control">
+			    <label for="priority">Priority</label>
+			    <select name="priority" id="priority" type="text" class="form-control">
 			    	<option value=""></option>
 						<option value="Priority 2: Urgent -  This impacts teaching (within one working day response time)">Priority 2: Urgent -  This impacts teaching (within one working day response time)</option>
 						<option value="Priority 3: Standard – Non critical (within one working week response time)">Priority 3: Standard – Non critical (within one working week response time)</option>
@@ -99,14 +97,11 @@
 			</div>
 			<div class="col-xs-12">
 			  <div class="form-group">
-			    <label for="email">Any Additional Information</label>
-			    <input type="text" class="form-control" id="description">
+			    <label for="additional">Any Additional Information</label>
+			    <input type="text" class="form-control" name="additional" id="additional">
 			  </div>
 			</div>
 			<div class="col-xs-12">
-			  <div style="margin-top:0; margin-bottom:15px;" class="checkbox">
-			    <label><input type="checkbox">Send me a copy of my responses.</label>
-			  </div>
 			  <button type="submit" class="btn btn-default">Submit</button>
 			</div>
 			<div class="col-xs-12">
