finished add process, started edit process

--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>How can we help?</title>
         <link href="/applications20162/favicon.ico" type="image/x-icon" rel="icon">
-        <link rel="stylesheet" href="public/assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="public/assets/css/mitie-helpdesk.css">
-        <link rel="stylesheet" href="public/assets/css/custom.css">
+        <link rel="stylesheet" href="{{constant('BASE')}}/public/assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{{constant('BASE')}}/public/assets/css/mitie-helpdesk.css">
+        <link rel="stylesheet" href="{{constant('BASE')}}/public/assets/css/custom.css">
         <link href='https://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script type="text/javascript" src="public/assets/js/bootstrap.min.js"></script>
