--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -8,17 +8,17 @@
         <link href="/applications20162/favicon.ico" type="image/x-icon" rel="icon">
         <link rel="stylesheet" href="{{constant('BASE')}}/public/assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{constant('BASE')}}/public/assets/css/mitie-helpdesk.css">
-        <link rel="stylesheet" href="{{constant('BASE')}}/public/assets/css/custom.css">
         <link href='https://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script type="text/javascript" src="public/assets/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="{{constant('BASE')}}/public/assets/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="{{constant('BASE')}}/public/assets/js/custom.js"></script>
     </head>
     <body>
     	<div class="container">
             {% block content %}
             {% endblock %}
             <footer>
-                <script src="public/assets/js/custom.js"></script>
+
             </footer>
         </div>
     </body>
