--- a/src/views/review.html
+++ b/src/views/review.html
@@ -14,13 +14,13 @@
                 <hr />
                 <div class="form-group required">
                     <label for="description">Description</label>
-                    <input name="description" required="required" type="text" class="form-control" id="description">
+                    <input name="description" required="required" disabled type="text" class="form-control" id="description">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="input select required form-group no-margin">
                     <label for="building">Which Building?</label>
-                    <select name="building" id="building" required="required" class="form-control">
+                    <select name="building" disabled id="building" required="required" class="form-control">
                         <option value=""></option>
                         <option value="Vantage Point Level 1">Vantage Point Level 1</option>
                         <option value="Vantage Point Level 2">Vantage Point Level 2</option>
@@ -54,7 +54,7 @@
             <div class="col-xs-12 col-md-6">
                 <div class="form-group required no-margin">
                     <label for="area">Room or area?</label>
-                    <input name="room" type="text" required="required" class="form-control" id="area">
+                    <input name="room" disabled type="text" required="required" class="form-control" id="area">
                 </div>
             </div>
             <div class="col-xs-12">
@@ -64,25 +64,25 @@
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="name">Requester's Name</label>
-                    <input name="name" type="text" class="form-control">
+                    <input disabled name="name" type="text" class="form-control">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="department">Department</label>
-                    <input name="department" type="text" class="form-control">
+                    <input disabled name="department" type="text" class="form-control">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="phone">Contact phone number</label>
-                    <input name="phone" type="tel" class="form-control">
+                    <input disabled name="phone" type="tel" class="form-control">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="input select form-group">
                     <label for="priority">Priority</label>
-                    <select name="priority" id="priority" type="text" class="form-control">
+                    <select disabled name="priority" id="priority" type="text" class="form-control">
                         <option value=""></option>
                         <option value="Priority 2: Urgent -  This impacts teaching (within one working day response time)">Priority 2: Urgent - This impacts teaching (within one working day response time)</option>
                         <option value="Priority 3: Standard – Non critical (within one working week response time)">Priority 3: Standard – Non critical (within one working week response time)</option>
@@ -93,11 +93,17 @@
             <div class="col-xs-12">
                 <div class="form-group">
                     <label for="additional">Any Additional Information</label>
-                    <input type="text" class="form-control" name="additional" id="additional">
+                    <input disabled type="text" class="form-control" name="additional" id="additional">
                 </div>
             </div>
-            <div class="col-xs-12">
-                <button type="submit" class="btn btn-default">Submit</button>
+            <div class="col-xs-12 col-sm-6">
+                <button style="width:100%;" id="submit" type="submit" class="btn btn-default col-xs-6">Submit</button>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <button style="width:100%;" id="edit" onclick="toggle_fields()" type="button" class="btn btn-default col-xs-6">
+                Edit</button>
+                <button style="width:100%;" id="save" onclick="toggle_fields()" type="button" class="btn btn-default col-xs-6 hidden">
+                Save</button>
             </div>
             <div class="col-xs-12">
                 <img style="margin-top:40px; margin-bottom:15px;" class="img-responsive" src="http://southdevon.ac.uk/images/template-images/shared_images/college-partners.jpg">
