--- a/src/views/review.html
+++ b/src/views/review.html
@@ -14,7 +14,7 @@
                 <hr />
                 <div class="form-group required">
                     <label for="description">Description</label>
-                    <input name="description" required="required" disabled type="text" class="form-control" id="description">
+                    <input name="description" required="required" disabled type="text" class="form-control" id="description" value="{{ description|convert_encoding('UTF-8', 'HTML-ENTITIES') }}">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
@@ -54,7 +54,7 @@
             <div class="col-xs-12 col-md-6">
                 <div class="form-group required no-margin">
                     <label for="area">Room or area?</label>
-                    <input name="room" disabled type="text" required="required" class="form-control" id="area">
+                    <input name="room" disabled type="text" required="required" class="form-control" id="area" value="{{ room }}">
                 </div>
             </div>
             <div class="col-xs-12">
@@ -64,19 +64,19 @@
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="name">Requester's Name</label>
-                    <input disabled name="name" type="text" class="form-control">
+                    <input disabled name="name" type="text" class="form-control" value="{{ name }}">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="department">Department</label>
-                    <input disabled name="department" type="text" class="form-control">
+                    <input disabled name="department" type="text" class="form-control" value="{{ department }}">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="phone">Contact phone number</label>
-                    <input disabled name="phone" type="tel" class="form-control">
+                    <input disabled name="phone" type="tel" class="form-control" value="{{ phone }}">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
@@ -93,21 +93,27 @@
             <div class="col-xs-12">
                 <div class="form-group">
                     <label for="additional">Any Additional Information</label>
-                    <input disabled type="text" class="form-control" name="additional" id="additional">
+                    <input disabled type="text" class="form-control" name="additional" id="additional" value="{{ additional|convert_encoding('UTF-8', 'HTML-ENTITIES') }}">
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6">
-                <button style="width:100%;" id="submit" type="submit" class="btn btn-default col-xs-6">Submit</button>
+                <a href="{{constant('BASE')}}/ticket/complete/{{ id }}">
+                    <span style="width:100%;" id="submit" class="btn btn-default col-xs-6">Submit</button>
+                </a>
             </div>
             <div class="col-xs-12 col-sm-6">
-                <button style="width:100%;" id="edit" onclick="toggle_fields()" type="button" class="btn btn-default col-xs-6">
-                Edit</button>
-                <button style="width:100%;" id="save" onclick="toggle_fields()" type="button" class="btn btn-default col-xs-6 hidden">
-                Save</button>
+                <button style="width:100%;" id="edit" onclick="toggle_fields()" type="button" class="btn btn-default col-xs-6">Edit</button>
+                <button style="width:100%;" id="save" type="submit" class="btn btn-default col-xs-6 hidden">Save</button>
             </div>
             <div class="col-xs-12">
                 <img style="margin-top:40px; margin-bottom:15px;" class="img-responsive" src="http://southdevon.ac.uk/images/template-images/shared_images/college-partners.jpg">
             </div>
         </div>
     </form>
+    <script type="text/javascript">
+    $( document ).ready(function() {
+        document.getElementById('building').value = "{{ building }}";
+        document.getElementById('priority').value = "{{ priority }}";
+    });
+    </script>
 {% endblock %}
