--- a/public/assets/css/mitie-helpdesk.css
+++ b/public/assets/css/mitie-helpdesk.css
@@ -32,6 +32,29 @@ body {
 	display: inline-block;
 	margin-bottom: 0px;
 }
+.container {
+	margin-top:15px;
+	margin-bottom:15px;
+}
+.btn-default {
+	border-color:#9a9a9a;
+	color:#fff;
+	background: #b5a0cb;
+	background: -moz-linear-gradient(top,  #b5a0cb 0%, #592a8c 100%);
+	background: -webkit-linear-gradient(top,  #b5a0cb 0%,#592a8c 100%);
+	background: linear-gradient(to bottom,  #b5a0cb 0%,#592a8c 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5a0cb', endColorstr='#592a8c',GradientType=0 );
+}
+.btn-default:hover {
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#947da3+0,4e2572+100 */
+	background: #947da3; /* Old browsers */
+	background: -moz-linear-gradient(top,  #947da3 0%, #4e2572 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  #947da3 0%,#4e2572 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  #947da3 0%,#4e2572 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#947da3', endColorstr='#4e2572',GradientType=0 ); /* IE6-9 */
+	color:#fff;
+	border-color:#9a9a9a;
+}
 /*-------------------------------
 -------  Styling Changes  -------
 -------------------------------*/
