--- a/src/views/homepage.html
+++ b/src/views/homepage.html
@@ -95,14 +95,20 @@
                     </select>
                 </div>
             </div>
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-md-6">
+                <div class="form-group">
+                    <label for="additional">Email Address</label>
+                    <input type="email" class="form-control" name="email" id="email">
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="additional">Any Additional Information</label>
                     <input type="text" class="form-control" name="additional" id="additional">
                 </div>
             </div>
             <div class="col-xs-12">
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button style="width:100%" type="submit" class="btn btn-default">Submit</button>
             </div>
             <div class="col-xs-12">
                 <img style="margin-top:40px; margin-bottom:15px;" class="img-responsive" src="http://southdevon.ac.uk/images/template-images/shared_images/college-partners.jpg">
