--- a/src/views/review.html
+++ b/src/views/review.html
@@ -90,10 +90,16 @@
                     </select>
                 </div>
             </div>
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-md-6">
+                <div class="form-group">
+                    <label for="additional">Email Address</label>
+                    <input type="email" class="form-control" name="email" id="email">
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="additional">Any Additional Information</label>
-                    <input disabled type="text" class="form-control" name="additional" id="additional" value="{{ additional|convert_encoding('UTF-8', 'HTML-ENTITIES') }}">
+                    <input type="text" class="form-control" name="additional" id="additional">
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6">
