Added '/' - removed remaining /public/

--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>How can we help?</title>
         <link href="/applications20162/favicon.ico" type="image/x-icon" rel="icon">
-        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/css/mitie-helpdesk.css">
+        <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/assets/css/mitie-helpdesk.css">
         <link href='https://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="assets/js/custom.js"></script>
+        <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/assets/js/custom.js"></script>
     </head>
     <body>
     	<div class="container">
