added Html Helper class + asset method

--- a/src/views/homepage.html
+++ b/src/views/homepage.html
@@ -8,7 +8,7 @@
                 <p class="no-margin" style="color:#C3232D; font-weight:bold;">* Required</p>
             </div>
             <div class="col-xs-2 col-sm-1">
-                <img style="margin-top:15px;" class="img-responsive" src="/assets/img/property.png">
+                <img style="margin-top:15px;" class="img-responsive" src="{{ asset('img/property.png') }}">
             </div>
             <div class="col-xs-12">
                 <h4>Emergencies</h4>
