--- a/src/views/review.html
+++ b/src/views/review.html
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6">
-                <a href="{{constant('BASE')}}/ticket/complete/{{ id }}">
+                <a href="{{ link('ticket/complete/' ~ id) }}">
                     <span style="width:100%;" id="submit" class="btn btn-default col-xs-6">Submit</button>
                 </a>
             </div>
