--- a/src/views/review.html
+++ b/src/views/review.html
@@ -93,13 +93,13 @@
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="additional">Email Address</label>
-                    <input disabled type="email" class="form-control" name="email" id="email">
+                    <input value="{{ email }}" disabled type="email" class="form-control" name="email" id="email">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="additional">Any Additional Information</label>
-                    <input disabled type="text" class="form-control" name="additional" id="additional">
+                    <input value="{{ additional }}" disabled type="text" class="form-control" name="additional" id="additional">
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6">
