--- a/src/views/review.html
+++ b/src/views/review.html
@@ -93,18 +93,18 @@
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="additional">Email Address</label>
-                    <input type="email" class="form-control" name="email" id="email">
+                    <input disabled type="email" class="form-control" name="email" id="email">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="additional">Any Additional Information</label>
-                    <input type="text" class="form-control" name="additional" id="additional">
+                    <input disabled type="text" class="form-control" name="additional" id="additional">
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6">
-                <a href="{{ link('ticket/complete/' ~ id) }}">
-                    <span style="width:100%;" id="submit" class="btn btn-default col-xs-6">Submit</button>
+                <a id="submit-btn" href="{{ link('ticket/complete/' ~ id) }}">
+                    <span style="width:100%;" id="submit" class="btn btn-default col-xs-6">Submit</span>
                 </a>
             </div>
             <div class="col-xs-12 col-sm-6">
