--- a/src/views/review.html
+++ b/src/views/review.html
@@ -102,7 +102,7 @@
                     <input value="{{ additional|convert_encoding('UTF-8', 'HTML-ENTITIES') }}" disabled type="text" class="form-control" name="additional" id="additional">
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-sm-6 btn-margin">
                 <a id="submit-btn" href="{{ link('ticket/complete/' ~ id) }}">
                     <span style="width:100%;" id="submit" class="btn btn-default col-xs-6">Submit</span>
                 </a>
