--- a/src/views/errors/405.html
+++ b/src/views/errors/405.html
@@ -2,46 +2,16 @@
 {% block content %}
 <div style="background-color:#f6f6f6;" class="row form-content">
 	<div style="background-color:#fff; border-bottom:1px solid #c3c3c3;" class="col-xs-12">
-		<h1 class="center-text">405 Method Not Allowed</h1>
+		<h1 class="center-text">405 Method not Allowed</h1>
 	</div>
 	<div class="col-xs-12">
-		<h2 class="center-text">We are sorry but there seems to be an error with your request!</h2>
+		<h2 class="center-text">Sorry, you can't do that here!</h2>
 	</div>
 	<div class="col-xs-12 col-sm-4">
 		<img class="img-responsive" img-responsive src="http://southdevon.ac.uk/images/template-images/shared_images/404-new-background.jpg">
 	</div>
 	<div class="col-xs-12 col-sm-8">
-		<h4 style="color:#777;">You may not be able to visit this page because of:</h4>
-		<ol>
-	    <li>an <strong>out-of-date bookmark/favourite</strong></li>
-	    <li>a search engine that has an <strong>out-of-date listing for this site</strong></li>
-	    <li>a <strong>mistyped address</strong></li>
-	    <li>you have <strong>no access</strong> to this page</li>
-	    <li>The requested resource was not found.</li>
-	    <li>An error has occurred while processing your request.</li>
-    </ol>
-    <p>Please try one of the following pages:</p>
-    <ul>
-	    <li><a href="http://southdevon.ac.uk" title="Go to the Home Page">Home Page</a></li>
-	    <li>
-	      <a title="Go to the Adults area" href="http://southdevon.ac.uk/adults">Adults information</a>
-	    </li>
-	    <li>
-	      <a title="Go to the 16-18 area" href="http://southdevon.ac.uk/16-18">16-18 information</a>
-	    </li>
-	    <li>
-	      <a title="Go to the University area" href="http://southdevon.ac.uk/university">University information</a>
-	    </li>
-	    <li>
-	      <a title="Go to the Business area" href="http://southdevon.ac.uk/business">Business information</a>
-	    </li>
-	    <li>
-	      <a title="Go to the Parents area" href="http://southdevon.ac.uk/parents">Information for Parents</a>
-	    </li>
-	    <li>
-	      <a title="Go to the College Course Search page" href="http://southdevon.ac.uk/courses">South Devon College Course Finder</a>
-	    </li>
-    </ul>
+		<h4 style="color:#777;">Please contact IT if you require assistance</h4>
 	</div>
 	<div style="margin-top:40px; background-color:#fff; border-top:1px solid #c3c3c3;" class="col-xs-12">
     <img style="margin-bottom:15px; margin-top:15px;" class="img-responsive" src="http://southdevon.ac.uk/images/template-images/shared_images/college-partners.jpg">
