--- a/public/assets/css/mitie-helpdesk.css
+++ b/public/assets/css/mitie-helpdesk.css
@@ -1,7 +1,10 @@
 /*-------------------------------
 --------  Global Styles  --------
 -------------------------------*/
-h2, h3, h4 {
+a:hover {
+    text-decoration:none;
+}
+h1, h2, h3, h4 {
     font-family:'Patua One', cursive;
     color:#592A8C;
     margin-top:15px;
@@ -71,6 +74,9 @@ body {
 .no-margin {
     margin:0;
 }
+.center-text {
+    text-align:center;
+}
 /*-------------------------------
 --------  Media Queries  --------
 -------------------------------*/
@@ -84,5 +90,11 @@ body {
     }
     .alert {
         margin-top:15px;
+    }
+    h1 {
+        font-size:26px;
+    }
+    h2 {
+        font-size:20px;
     }
 }
