--- a/src/Views/dev-homepage.html
+++ b/src/Views/dev-homepage.html
@@ -1,4 +1,4 @@
-{% extends "layouts/#{app_layout_name}" %}
+{% extends "Layouts/#{app_layout_name}" %}
 {% block content %}
 <form method="post" accept-charset="utf-8" id="tickets" action"/">
 	<input type="date" name="date">
