--- a/src/Views/Errors/405.html
+++ b/src/Views/Errors/405.html
@@ -1,4 +1,4 @@
-{% extends "layouts/#{app_layout_name}" %}
+{% extends "Layouts/#{app_layout_name}" %}
 {% block content %}
 <div style="background-color:#f6f6f6;" class="row form-content">
 	<div style="background-color:#fff; border-bottom:1px solid #c3c3c3;" class="col-xs-12">
