--- a/src/Views/homepage.html
+++ b/src/Views/homepage.html
@@ -1,26 +1,31 @@
-{% extends "layouts/#{app_layout_name}" %}
+{% extends "Layouts/#{app_layout_name}" %}
 {% block content %}
     <form role="form" method="POST">
         <div class="row form-content">
             <div class="col-xs-10 col-sm-11">
-                <h3>Review Your Request</h3>
-                <p>Please review your request and either edit or submit the ticket.</p>
+                <h3>How Can we help?</h3>
+                <p>Report to or request support from Property Services Support Desk.</p>
                 <p class="no-margin" style="color:#C3232D; font-weight:bold;">* Required</p>
             </div>
             <div class="col-xs-2 col-sm-1">
                 <img style="margin-top:15px;" class="img-responsive" src="{{ asset('img/property.png') }}">
             </div>
             <div class="col-xs-12">
-                <hr />
+                <h4>Emergencies</h4>
+                <p>i.e. leaks/floods, power loss, safety or security issues - call x877</p>
+                <h4>Quick Service</h4>
+                <p>If you DON'T require progress updates - complete the next 3 boxes only</p>
+            </div>
+            <div class="col-xs-12">
                 <div class="form-group required">
                     <label for="description">Description</label>
-                    <input name="description" required="required" disabled type="text" class="form-control" id="description" value="{{ description|convert_encoding('UTF-8', 'HTML-ENTITIES') }}">
+                    <input name="description" required="required" type="text" class="form-control" id="description">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="input select required form-group no-margin">
                     <label for="building">Which Building?</label>
-                    <select name="building" disabled id="building" required="required" class="form-control">
+                    <select name="building" id="building" required="required" class="form-control">
                         <option value=""></option>
                         <option value="Vantage Point Level 1">Vantage Point Level 1</option>
                         <option value="Vantage Point Level 2">Vantage Point Level 2</option>
@@ -54,7 +59,7 @@
             <div class="col-xs-12 col-md-6">
                 <div class="form-group required no-margin">
                     <label for="area">Room or area?</label>
-                    <input name="room" disabled type="text" required="required" class="form-control" id="area" value="{{ room }}">
+                    <input name="room" type="text" required="required" class="form-control" id="area">
                 </div>
             </div>
             <div class="col-xs-12">
@@ -64,25 +69,25 @@
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="name">Requester's Name</label>
-                    <input disabled name="name" type="text" class="form-control" value="{{ name|convert_encoding('UTF-8', 'HTML-ENTITIES') }}">
+                    <input name="name" type="text" class="form-control">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="department">Department</label>
-                    <input disabled name="department" type="text" class="form-control" value="{{ department|convert_encoding('UTF-8', 'HTML-ENTITIES') }}">
+                    <input name="department" type="text" class="form-control">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="phone">Contact phone number</label>
-                    <input disabled name="phone" type="tel" class="form-control" value="{{ phone }}">
+                    <input name="phone" type="tel" class="form-control">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="input select form-group">
                     <label for="priority">Priority</label>
-                    <select disabled name="priority" id="priority" type="text" class="form-control">
+                    <select name="priority" id="priority" type="text" class="form-control">
                         <option value=""></option>
                         <option value="Priority 2: Urgent -  This impacts teaching (within one working day response time)">Priority 2: Urgent - This impacts teaching (within one working day response time)</option>
                         <option value="Priority 3: Standard – Non critical (within one working week response time)">Priority 3: Standard – Non critical (within one working week response time)</option>
@@ -93,33 +98,21 @@
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="additional">Email Address</label>
-                    <input value="{{ email }}" disabled type="email" class="form-control" name="email" id="email">
+                    <input type="email" class="form-control" name="email" id="email">
                 </div>
             </div>
             <div class="col-xs-12 col-md-6">
                 <div class="form-group">
                     <label for="additional">Any Additional Information</label>
-                    <input value="{{ additional|convert_encoding('UTF-8', 'HTML-ENTITIES') }}" disabled type="text" class="form-control" name="additional" id="additional">
+                    <input type="text" class="form-control" name="additional" id="additional">
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 btn-margin">
-                <a id="submit-btn" href="{{ link('ticket/complete/' ~ id) }}">
-                    <span style="width:100%;" id="submit" class="btn btn-default col-xs-6">Submit</span>
-                </a>
-            </div>
-            <div class="col-xs-12 col-sm-6">
-                <button style="width:100%;" id="edit" onclick="toggle_fields()" type="button" class="btn btn-default col-xs-6">Edit</button>
-                <button style="width:100%;" id="save" type="submit" class="btn btn-default col-xs-6 hidden">Save</button>
+            <div class="col-xs-12">
+                <button style="width:100%" type="submit" class="btn btn-default">Submit</button>
             </div>
             <div class="col-xs-12">
                 <img style="margin-top:40px; margin-bottom:15px;" class="img-responsive" src="http://southdevon.ac.uk/images/template-images/shared_images/college-partners.jpg">
             </div>
         </div>
     </form>
-    <script type="text/javascript">
-    $( document ).ready(function() {
-        document.getElementById('building').value = "{{ building }}";
-        document.getElementById('priority').value = "{{ priority }}";
-    });
-    </script>
 {% endblock %}
